# backmate

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  clippy.yml  rustfmt.yml  trufflehog.yml
b2native/: Cargo.toml  README.md
b2native/src/: api.rs  config.rs  lib.rs
b2native/src/api/: authorize_account.rs  b2_authorize_account.rs  b2_list_buckets.rs
src/: README.md  app.rs  assets.rs  main.rs  tailwind.rs  views.rs
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/views/: dashboard.rs  login.rs
