[package]
name = "b2native"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
figment = { version = "0.10", features = ["env"] }
http = { version = "1.1" }

[dev-dependencies]
tokio = { version = "1.41", features = ["full"]}
serde_json = { version = "1.0" }

[lints]
workspace = true

[features]
default = []
integration-tests = []