[package]
name = "b2native"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
figment = { version = "0.10", features = ["env"] }
http = { version = "1.1" }
tokio = { version = "1.42", features = ["full"]}

[lints]
workspace = true

[features]
default = []
integration-tests = []